# gdcf

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
gdcf/: Cargo.toml  extend.rs
gdcf/src/: build.rs  cache.rs  error.rs  exchange.rs  ext.rs  future.rs  gcdf2.rs  lib.rs  macros.rs  selfless.rs
gdcf/src/api/: client.rs  mod.rs  response.rs
gdcf/src/api/request/: cacher.rs  comment.rs  level.rs  macros.rs  mod.rs  ser.rs  user.rs
gdcf/src/convert/: int.rs  mod.rs  str.rs
gdcf/src/extend/: level.rs  mod.rs  user.rs
gdcf/src/future/: extend.rs  mod.rs  process.rs  refresh.rs  stream.rs  upgrade.rs
gdcf/src/model/: de.rs  level.rs  mod.rs  raw.rs  song.rs  user.rs
gdcf/src/upgrade/: level.rs  mod.rs  user.rs
gdcf_dbcache/: Cargo.toml
gdcf_dbcache/old/cache/: mysql.rs  pg.rs
gdcf_dbcache/old/schema/: macros.rs  mod.rs
gdcf_dbcache/schema/: mysql.sql  postgres.sql  sqlite.sql
gdcf_dbcache/src/: cache.rs  de.rs  lib.rs  resulter.rs  ser.rs  util.rs
gdcf_dbcache/src/cache/: mod.rs  mysql.rs  pg.rs  sqlite.rs
gdcf_dbcache/src/core/: macros.rs  mod.rs  statement.rs  table.rs  types.rs
gdcf_dbcache/src/core/backend/: mod.rs  util.rs
gdcf_dbcache/src/core/backend/pg/: condition.rs  constraint.rs  convert.rs  mod.rs  query.rs  types.rs
gdcf_dbcache/src/core/backend/sqlite/: convert.rs  mod.rs  query.rs
gdcf_dbcache/src/core/query/: condition.rs  create.rs  delete.rs  insert.rs  mod.rs  select.rs
gdcf_dbcache/src/schema/: level.rs  macros.rs  mod.rs  song.rs  user.rs
gdcf_dbcache/src/schema/song/: mod.rs  mysql.rs  pg.rs  sqlite.rs
gdcf_derive/: Cargo.toml
gdcf_derive/src/: lib.rs
gdcf_diesel/: Cargo.toml
gdcf_diesel/migrations/postgres/10_PGONLY_fix_profile_meta_column_type/: down.sql  up.sql
gdcf_diesel/migrations/postgres/1_initial_version/: up.sql
gdcf_diesel/migrations/postgres/3_new_level_indices/: down.sql
gdcf_diesel/migrations/postgres/4_mod_level/: down.sql  up.sql
gdcf_diesel/migrations/postgres/5_colors/: down.sql  up.sql
gdcf_diesel/migrations/postgres/6_fix_profile/: down.sql  up.sql
gdcf_diesel/migrations/postgres/7_rename_request_results/: up.sql
gdcf_diesel/migrations/postgres/8_PGONLY_incorrect_column_type/: down.sql  up.sql
gdcf_diesel/migrations/postgres/9_incorrect_profile_primary/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/1_initial_version/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/2_mark_absent/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/3_new_level_indices/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/4_mod_level/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/5_colors/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/6_fix_profile/: down.sql  up.sql
gdcf_diesel/migrations/sqlite/7_rename_request_results/: down.sql
gdcf_diesel/migrations/sqlite/9_incorrect_profile_primary/: down.sql  up.sql
gdcf_diesel/src/: creator.rs  key.rs  level.rs  lib.rs  macros.rs  meta.rs  partial_level.rs  profile.rs  song.rs  wrap.rs
gdcf_model/: Cargo.toml
gdcf_model/src/: comment.rs  level.rs  lib.rs  song.rs  user.rs
gdcf_model/src/level/: data.rs
gdcf_model/src/level/data/: ids.rs  portal.rs  text.rs  trigger.rs
gdcf_parse/: Cargo.toml
gdcf_parse/src/: comment.rs  convert.rs  error.rs  level.rs  level_data.rs  lib.rs  macros.rs  song.rs  user.rs  util.rs
gdcf_parse/src/level/: data.rs  object.rs
gdcf_parse/src/level_data/: ids.rs  metadata.rs  portal.rs  speed.rs
gdcf_postgres/: Cargo.toml
gdrs/: Cargo.toml
gdrs/src/: error.rs  handle.rs  lib.rs  macros.rs  parse.rs
gdrs/src/ser/: mod.rs  util.rs
gdrs/src/ser/request/: comment.rs  level.rs  mod.rs  user.rs
pm_gdcf_dbcache/: Cargo.toml
pm_gdcf_dbcache/src/: create.rs  lib.rs  macros.rs  table.rs
scripts/: make_struct.py
src/: main.rs
