[package]
name = "gd_caching_framework"
version = "0.1.0"

[dependencies]
futures = "^0.1.17"
tokio-core = "0.1"
hyper = "^0.11.25"
serde_urlencoded = "0.5.1"
serde_json = "^1.0"
chrono = "^0.4.0"
log = "^0.4.0"
env_logger = "^0.5.9"

[dependencies.gdcf]
path = "gdcf"

[dependencies.gdrs]
path = "gdrs"

[dependencies.gdcf_dbcache]
path = "gdcf_dbcache"
features = ["postgres"]

[workspace]
