[package]
name = "gd_caching_framework"
version = "0.1.0"

[dependencies]
futures = "^0.1.17"
chrono = "^0.4.0"
log = "^0.4.0"
env_logger = "^0.5.9"
tokio = "0.1.7"

[dependencies.gdcf]
path = "gdcf"

[dependencies.gdrs]
path = "gdrs"

[dependencies.gdcf_dbcache]
path = "gdcf_dbcache"
features = ["pg"]

[workspace]
