[package]
name = "gdcf"
version = "0.1.0"

[dependencies]
futures = "^0.1.17"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
gdcf_derive = { path = "../gdcf_derive" }
lazy_static = "1.0"
chrono = "^0.4.0"
log = "^0.4.0"

[features]
ser = [
    "serde",
    "serde_derive"
]
ensure_cache_integrity = []