[package]
name = "gdcf"
version = "0.1.0"

[dependencies]
futures = "^0.1.17"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
chrono = "^0.4.0"
log = "^0.4.0"
failure = "0.1.2"
failure_derive = "0.1.2"

[features]
serde_support = [
    "serde",
    "serde_derive"
]
