[package]
name = "gdcf_dbcache"
version = "0.1.0"

[dependencies]
chrono = "^0.4.0"
log = "^0.4.0"
seahash = "^3.0.5"
joinery = "1.0.0"

[dependencies.rusqlite]
version = "^0.13.0"
optional = true

[dependencies.postgres]
version = "^0.15.2"
optional = true
features = ["with-chrono"]

[dependencies.gdcf]
path = "../gdcf"

[dependencies.pm_gdcf_dbcache]
path = "../pm_gdcf_dbcache"

[features]
default = ["sqlite"]

pg = ["postgres"]
mysql = []
sqlite = ["rusqlite"]