[package]
name = "gdcf_dbcache"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "^0.4.0"
seahash = "^3.0.5"
joinery = "1.0.0"
failure = "0.1.2"
failure_derive = "0.1.2"
r2d2 = "0.8.3"
chrono = "0.4.6"

[dependencies.postgres]
version = "^0.15.2"
optional = true
features = ["with-chrono"]

[dependencies.r2d2_postgres]
version = "^0.14.0"
optional = true

[dependencies.r2d2_sqlite]
version = "^0.8.0"
optional = true

[dependencies.rusqlite]
version = "^0.16.0"
optional = true
features = ["bundled"]

[dependencies.gdcf]
path = "../gdcf"

[dependencies.gdcf_model]
path = "../gdcf_model"

[dependencies.pm_gdcf_dbcache]
path = "../pm_gdcf_dbcache"

[features]
default = ["pg"]

pg = ["postgres", "r2d2_postgres"]
sqlite = ["rusqlite", "r2d2_sqlite"]
