[package]
name = "gdcf_parse"
version = "0.1.0"
authors = ["stadust <43299462+stadust@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
percent-encoding = "1.0.1"
log = "0.4.6"

[dependencies.rayon]
version = "1.0.3"
optional = true

[dependencies.gdcf_model]
path = "../gdcf_model"

[features]
parallel = ["rayon"]
