[package]
name = "gdrs"
version = "0.1.0"

[dependencies]
futures = "^0.1.17"
hyper = "^0.12.8"
serde_urlencoded = "0.5.1"
serde = "^1.0"
serde_derive = "^1.0"
log = "^0.4.0"
tokio-retry = "^0.2.0"
joinery = "1.0.0"
failure_derive = "0.1.5"
failure = "0.1.5"

[dependencies.gdcf]
path = "../gdcf"

[dependencies.gdcf_parse]
path = "../gdcf_parse"

[dependencies.gdcf_model]
path = "../gdcf_model"